# crates/rhtmx-router/Cargo.toml
[package]
name = "rhtmx-router"
version = "0.1.0"
edition = "2021"
authors = ["RHTMX Contributors"]
license = "MIT"
description = "File-based routing for Rust web frameworks with support for dynamic segments, catch-all routes, and optional parameters."
repository = "https://github.com/jeetkhinde/RHTMX"
keywords = ["router", "web", "file-based", "routing", "framework-agnostic"]
categories = ["web-programming"]
readme = "README.md"

[lib]
name = "rhtmx_router"
path = "src/lib.rs"

[dependencies]
# Using only Rust std library, no external dependencies.

[dev-dependencies]
pretty_assertions = "1.4"
rstest = "0.22"
