[package]
name = "rhtmx-sync-macro"
version = "0.1.0"
edition = "2021"
authors = ["RHTMX Contributors"]
license = "MIT"
description = "Procedural macros for rhtmx-sync - #[derive(Syncable)]"
repository = "https://github.com/jeetkhinde/RHTMX"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
darling = "0.20"  # For parsing derive macro attributes
